# FlowBeat

./: .gitignore
.github/agents/: my-agent.agent.md
PD/: 分阶段开发规划书.md  需求规格说明书.md  项目结构规划说明书.md
backend/: alembic.ini  main.py  pyproject.toml  upload_script.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 3be68cf36e73_add_music_models.py  922873d1a0ca_initial_setup.py  ab28d953f7b3_add_user_table.py  d55875a5c2eb_add_user_table_with_server_side_uuid.py  f42a8ec4e6f0_fix_datetime_timezone.py
backend/app/: __init__.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  music.py  recommendations.py  users.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/models/: __init__.py  base.py  interaction.py  music.py  user.py
backend/app/repositories/: __init__.py  base.py  interaction_repository.py  music_repository.py  user_repository.py
backend/app/schemas/: __init__.py  music.py  token.py  user.py
backend/app/services/: __init__.py  auth_service.py  minio_client.py  music_service.py  recommendation_service.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
deploy/: docker-compose.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  axios.ts  music.ts  recommendation.ts  users.ts
frontend/src/assets/: naive-ui-def.css
frontend/src/components/common/: LikeButton.vue
frontend/src/components/layout/: Header.vue  MainLayout.vue  Sidebar.vue
frontend/src/components/player/: AudioPlayer.vue  PlayList.vue
frontend/src/composables/: useAudio.ts  useTheme.ts
frontend/src/router/: index.ts
frontend/src/stores/: playerStore.ts  playlistStore.ts  userStore.ts
frontend/src/types/: api.ts  entity.ts
frontend/src/views/auth/: Login.vue  Register.vue
frontend/src/views/profile/: UserProfile.vue
